[package]
name = "egui_glfw"
version = "0.13.1"
authors = ["cohaereo <lucasteal@protonmail.com>", "r-esu <random@mail.com>"]
edition = "2021"
description = "OpenGL backend for egui using GLFW"
homepage = "https://github.com/r-esu/egui_glfw"
license = "MIT"
readme = "README.md"
repository = "https://github.com/r-esu/egui_glfw"
categories = ["gui", "graphics"]
keywords = ["glfw", "opengl", "egui", "gui", "gamedev"]
include = ["**/*.rs", "Cargo.toml"]

[dependencies]
gl = "*"
glfw = "*"
egui = "*"

[dependencies.clipboard]
package = "cli-clipboard"
version = "*"
optional = true

[features]
default = ["clipboard"]
