[package]
name = "egui_glfw"
version = "0.55.0"
authors = ["cohaereo <lucasteal@protonmail.com>", "r-esu <random@mail.com>"]
edition = "2021"
description = "OpenGL backend for egui using GLFW"
homepage = "https://github.com/r-esu/egui_glfw"
license = "MIT"
readme = "README.md"
repository = "https://github.com/r-esu/egui_glfw"
categories = ["gui", "graphics"]
keywords = ["glfw", "opengl", "egui", "gui", "gamedev"]
include = ["**/*.rs", "Cargo.toml", "**/*.vert", "**/*.frag"]

[dependencies]
gl = "0.14.0"
glfw = "0.55.0"
egui = "0.27.1"

[dependencies.clipboard]
package = "cli-clipboard"
version = "0.4.0"
optional = true

[features]
default = ["clipboard"]
